--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,18 @@
 baseURL = 'https://p2pcloud.io/'
 languageCode = 'en-us'
 title = 'Decentralized Cloud on Avalanche blockchain'
-#theme = 'lugo'
+[markup]
+  [markup.highlight]
+    anchorLineNos = false
+    codeFences = true
+    guessSyntax = true
+    hl_Lines = ''
+    hl_inline = false
+    lineAnchors = ''
+    lineNoStart = 1
+    lineNos = true
+    lineNumbersInTable = true
+    noClasses = true
+    noHl = false
+    style = 'github-dark'
+    tabWidth = 4
